fix the h2 h3 h4 spacing

--- a/resume/qplot-touchup.css
+++ b/resume/qplot-touchup.css
@@ -40,3 +40,9 @@
 .markdown-body h2 {
   margin-top: 2em;
 }
+.markdown-body h3 {
+  margin-bottom: 0.2em;
+}
+.markdown-body h4 {
+  margin: 0em;
+}
